--- a/assets/figmastyle.css
+++ b/assets/figmastyle.css
@@ -139,7 +139,7 @@
     left: 976px;
     top: 226px;
     z-index: 4;
-    background: url("../assets/Photos/_1 1.png");
+    background: url("../Big.png");
 }
 .big_image_bottom_ellipse{
     position: absolute;
